# 3ds_play_event_exporter

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
source/: flockfile.c  main.cpp  ptmplays.c  ptmplays.h
